# grouphs

./: Group.hs  GroupUtils.hs  README  SnGroup.hs  TODO.txt  Test.hs  compile_and_run.sh  group.hs  groupUtils.hs  grouphs.cabal
src/: Group.hs  GroupUtils.hs  SnGroup.hs  ZnZGroup.hs
test/: Test.hs
