name:                grouphs
version:             0.1.0.0
synopsis:            Algebraic groups in Haskell

homepage:            http://elfeck.com
license:             MIT
license-file:        LICENSE
author:              Sebastian Kreisel
maintainer:          kreisel.sebastian@gmail.com

category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable grouphs
  main-is:           Test.hs
  build-depends:     base >=4.5 && <4.8
  default-language:  Haskell2010